--- a/public/css/circle.css
+++ b/public/css/circle.css
@@ -74,7 +74,7 @@
   width: 5em;
   line-height: 5em;
   font-size: 0.2em;
-  color: #cccccc;
+  color: #9a9292;
   display: block;
   text-align: center;
   white-space: nowrap;
